my first header done

--- a/index.html
+++ b/index.html
@@ -4,6 +4,39 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>flower Shop</title>
+    <!-- google font family -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,400;1,900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
+      rel="stylesheet"
+    />
+    <!-- stylesheet our website -->
+    <link rel="stylesheet" href="styels/header.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- website header section -->
+    <header>
+      <div class="header-contain">
+        <h1 class="header-titel-style">
+          Let's make beautiful flowers a part of your life.
+        </h1>
+        <p class="header-paragra">
+          It is a long established fact that a reader will be distracted by the
+          readable content of a page when looking at its layout. The point of
+          using Lorem Ipsum is that it has a more-or-less normal distribution of
+          letters.
+        </p>
+        <button class="shop-now-btn">Shop Now</button>
+      </div>
+
+      <div class="banner-image">
+        <img src="/Flower Asset/pngwing 10.png" alt="" />
+      </div>
+    </header>
+    <!-- website main section -->
+    <main></main>
+    <!-- website footer section -->
+    <footer></footer>
+  </body>
 </html>
