card section pending

--- a/index.html
+++ b/index.html
@@ -35,7 +35,30 @@
       </div>
     </header>
     <!-- website main section -->
-    <main></main>
+    <main>
+      <div class="our-featured-fl">
+        <h3>Our Featured Flowers</h3>
+        <p class="our-featured-p">
+          It is a long established fact that a reader will be distracted by the
+          readable content of a page when looking at its layout.
+        </p>
+      </div>
+
+      <div class="card-container">
+        <div class="card">
+          <img src="/Flower Asset/pngwing 6.png" alt="Image 1" />
+          <p>This is the first card.</p>
+        </div>
+        <div class="card">
+          <img src="/Flower Asset/pngwing 5.png" alt="Image 2" />
+          <p>This is the second card.</p>
+        </div>
+        <div class="card">
+          <img src="/Flower Asset/pngwing 7.png" alt="Image 3" />
+          <p>This is the third card.</p>
+        </div>
+      </div>
+    </main>
     <!-- website footer section -->
     <footer></footer>
   </body>
