our featured flowers section done

--- a/index.html
+++ b/index.html
@@ -36,28 +36,34 @@
     </header>
     <!-- website main section -->
     <main>
-      <div class="our-featured-fl">
-        <h3>Our Featured Flowers</h3>
-        <p class="our-featured-p">
+      <section class="our_featured_flowers">
+        <h2 class="off_title">Our Featured Flowers</h2>
+
+        <p class="off_description">
           It is a long established fact that a reader will be distracted by the
           readable content of a page when looking at its layout.
         </p>
-      </div>
 
-      <div class="card-container">
-        <div class="card">
-          <img src="/Flower Asset/pngwing 6.png" alt="Image 1" />
-          <p>This is the first card.</p>
+        <div class="off_image_container">
+          <div class="oof_image_1st_div">
+            <img class="oof_img_1" src="/Flower Asset/pngwing 6.png" alt="" />
+          </div>
+
+          <div class="oof_image_2nd_div">
+            <img class="oof_img_2" src="/Flower Asset/pngwing 5.png" alt="" />
+          </div>
+
+          <div class="oof_image_3rd_div">
+            <img class="oof_img_3" src="/Flower Asset/pngwing 7.png" alt="" />
+          </div>
         </div>
-        <div class="card">
-          <img src="/Flower Asset/pngwing 5.png" alt="Image 2" />
-          <p>This is the second card.</p>
+
+        <div class="off_description_div">
+          <p class="oof_description_1">Pink Flower Tree</p>
+          <p class="oof_description_2">Pink Flower Tree</p>
+          <p class="oof_description_3">Pink Flower Tree</p>
         </div>
-        <div class="card">
-          <img src="/Flower Asset/pngwing 7.png" alt="Image 3" />
-          <p>This is the third card.</p>
-        </div>
-      </div>
+      </section>
     </main>
     <!-- website footer section -->
     <footer></footer>
