services and discount part end

--- a/index.html
+++ b/index.html
@@ -64,6 +64,56 @@
           <p class="oof_description_3">Pink Flower Tree</p>
         </div>
       </section>
+      <!-- services part  -->
+      <section class="Service">
+        <div class="service_container">
+          <div class="service_container_1">
+            <img
+              class="img_service_container_1"
+              src="/Flower Asset/Group 57.png"
+              alt=""
+            />
+          </div>
+
+          <div class="service_container_2">
+            <img
+              class="img_service_container_2"
+              src="/Flower Asset/Group 58.png"
+              alt=""
+            />
+          </div>
+
+          <div class="service_container_3">
+            <img
+              class="img_service_container_3"
+              src="/Flower Asset/Group 59.png"
+              alt=""
+            />
+          </div>
+        </div>
+
+        <div class="service_details">
+          <p class="service_details_1">Same Day Delivery. Click & Collect.</p>
+          <p class="service_details_2">Fresh Flowers. Local Growers.</p>
+          <p class="service_details_3">24/7 Free Support.</p>
+        </div>
+      </section>
+      <!-- services part end  -->
+       <!-- starting discount  -->
+      <section class="discount">
+        <div class="discount_title_container">
+            <h1 class="discount_title">Hot Deal ! Sale Up To 25% Off</h1>
+            <p class="discrount_description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            <button id="discount_btn" class="shop-now-btn">Sign Up</button>
+        </div>
+        
+        <div class="image_container">
+            <img src="/Flower Asset/pngwing 8.png" alt="" class="discount_section_image">
+        </div>
+    </div>
+    <!-- discount end -->
+    </section>
+
     </main>
     <!-- website footer section -->
     <footer></footer>
