instragram part ends

--- a/index.html
+++ b/index.html
@@ -112,8 +112,21 @@
         </div>
     </div>
     <!-- discount end -->
-    </section>
 
+
+    </section>
+    <!-- Instagram part start -->
+    <section class="instagram">
+      <h1 class="insta_title">Instagram</h1>
+      <p class="insta_description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+      <div class="insta_image_container">
+          <img src="/Flower Asset/Flower 01.png" alt="" class="insta_image1">
+          <img src="/Flower Asset/Rectangle 4.png" alt="" class="insta_image2">
+          <img src="/Flower Asset/Rectangle 5.png" alt="" class="insta_image3">
+          <img src="/Flower Asset/Rectangle 6.png" alt="" class="insta_image4">
+      </div>
+  </section>       
+    <!-- Instagram part end -->
     </main>
     <!-- website footer section -->
     <footer></footer>
