end deatails part

--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
         </div>
       </section>
       <!-- services part end  -->
+
+
+      
        <!-- starting discount  -->
       <section class="discount">
         <div class="discount_title_container">
@@ -126,7 +129,26 @@
           <img src="/Flower Asset/Rectangle 6.png" alt="" class="insta_image4">
       </div>
   </section>       
-    <!-- Instagram part end -->
+    <!-- Instagram part end --> 
+    <!-- start datials part -->
+    <section>
+      <div class="deals-container">
+          <div class="deals1">
+          <h2 class="insta_title">
+              Get The Latest Deals
+          </h2>
+          <p class="insta_description">
+              $30 coupon for first shopping
+          </p>
+          <form action="" class="sub">
+              <input class="texthol" type="text" placeholder="Enter your email here....">
+              <input id="btn33" class="shop-now-btn" type="button" value="Submit">
+          </form>
+      </div>
+      </div>
+  </section>
+  <!-- end details part -->
+  </main>
     </main>
     <!-- website footer section -->
     <footer></footer>
