--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <!-- services part end  -->
 
 
-      
+
        <!-- starting discount  -->
       <section class="discount">
         <div class="discount_title_container">
@@ -151,6 +151,13 @@
   </main>
     </main>
     <!-- website footer section -->
-    <footer></footer>
+    <footer>
+      <div class="foot">
+        <div class="foot-ele">
+        <h2 class="foot_title"><span>Flower</span>Shop</h2>
+        <p class="foot_des">It is a long established fact that a reader will be distracted by the readable<br> content of a page when looking at its layout.</p>
+        <p class="add">@2020-2023, Apugharami.com. All rights reserved. </p>
+        </div>
+    </footer>
   </body>
 </html>
