some missing code

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
 
       <div class="banner-image">
-        <img src="/Flower Asset/pngwing 10.png" alt="" />
+        <img src="./Flower Asset/pngwing 10.png" alt="" />
       </div>
     </header>
     <!-- website main section -->
@@ -46,15 +46,15 @@
 
         <div class="off_image_container">
           <div class="oof_image_1st_div">
-            <img class="oof_img_1" src="/Flower Asset/pngwing 6.png" alt="" />
+            <img class="oof_img_1" src="./Flower Asset/pngwing 6.png" alt="" />
           </div>
 
           <div class="oof_image_2nd_div">
-            <img class="oof_img_2" src="/Flower Asset/pngwing 5.png" alt="" />
+            <img class="oof_img_2" src="./Flower Asset/pngwing 5.png" alt="" />
           </div>
 
           <div class="oof_image_3rd_div">
-            <img class="oof_img_3" src="/Flower Asset/pngwing 7.png" alt="" />
+            <img class="oof_img_3" src="./Flower Asset/pngwing 7.png" alt="" />
           </div>
         </div>
 
