--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <div class="service_container_1">
             <img
               class="img_service_container_1"
-              src="/Flower Asset/Group 57.png"
+              src="./Flower Asset/Group 57.png"
               alt=""
             />
           </div>
@@ -78,7 +78,7 @@
           <div class="service_container_2">
             <img
               class="img_service_container_2"
-              src="/Flower Asset/Group 58.png"
+              src="./Flower Asset/Group 58.png"
               alt=""
             />
           </div>
@@ -86,7 +86,7 @@
           <div class="service_container_3">
             <img
               class="img_service_container_3"
-              src="/Flower Asset/Group 59.png"
+              src="./Flower Asset/Group 59.png"
               alt=""
             />
           </div>
@@ -111,7 +111,7 @@
         </div>
         
         <div class="image_container">
-            <img src="/Flower Asset/pngwing 8.png" alt="" class="discount_section_image">
+            <img src="./Flower Asset/pngwing 8.png" alt="" class="discount_section_image">
         </div>
     </div>
     <!-- discount end -->
@@ -123,10 +123,10 @@
       <h1 class="insta_title">Instagram</h1>
       <p class="insta_description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
       <div class="insta_image_container">
-          <img src="/Flower Asset/Flower 01.png" alt="" class="insta_image1">
-          <img src="/Flower Asset/Rectangle 4.png" alt="" class="insta_image2">
-          <img src="/Flower Asset/Rectangle 5.png" alt="" class="insta_image3">
-          <img src="/Flower Asset/Rectangle 6.png" alt="" class="insta_image4">
+          <img src="./Flower Asset/Flower 01.png" alt="" class="insta_image1">
+          <img src="./Flower Asset/Rectangle 4.png" alt="" class="insta_image2">
+          <img src="./Flower Asset/Rectangle 5.png" alt="" class="insta_image3">
+          <img src="./Flower Asset/Rectangle 6.png" alt="" class="insta_image4">
       </div>
   </section>       
     <!-- Instagram part end --> 
